# aleph-filter

./: Cargo.toml  README.md
benches/: filter_comparison.rs
benches/results/: benchmark_results.json
docs/: aleph.bak  aleph_filter_explained.aux  aleph_filter_explained.fdb_latexmk  aleph_filter_explained.fls  aleph_filter_explained.out  aleph_filter_explained.tex  aleph_filter_explained.toc
docs/chapters/: aleph-filter.aux  aleph-filter.tex  background.aux  background.tex  comparison-and-conclusion.aux  comparison-and-conclusion.tex  core-data-structures.aux  project-structure.tex  quotient-filters-and-expansion.aux  quotient-filters-and-expansion.tex  rust-implementation.aux  rust-implementation.tex
examples/: benchmark_report.rs
src/: aleph_filter.rs  hash.rs  lib.rs  metadata.rs  slot.rs
tests/: aleph_filter_tests.rs
