[package]
name = "aleph-filter"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Neel Bansal"]
description = "The Aleph Filter — an infinitely expandable probabilistic data structure with O(1) insert, query, and delete"
license = "MIT"
repository = "https://github.com/NPX2218/aleph-filter"
homepage = "https://github.com/NPX2218/aleph-filter"
documentation = "https://docs.rs/aleph-filter"
readme = "README.md"
keywords = ["filter", "probabilistic", "bloom", "cuckoo", "quotient"]
categories = ["data-structures", "algorithms"]
exclude = [
    "docs/*.aux",
    "docs/*.log",
    "docs/*.fls",
    "docs/*.fdb_latexmk",
    "docs/*.synctex.gz",
    "docs/*.toc",
    "docs/*.out",
    "docs/chapters/*.aux",
    "docs/aleph.bak",
    "benches/results/",
]

[dependencies]
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[dev-dependencies]
# Competing filters for benchmarks
bloomfilter = "1"
cuckoofilter = "0.5"
xorf = { version = "0.11", features = ["uniform-random"] }

# Benchmarking & utilities
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bench]]
name = "filter_comparison"
harness = false
